--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LibraryManagement</name>
+	<name>librarymanagement</name>
 	<comment>Project LibraryManagement created by Buildship.</comment>
 	<projects>
 	</projects>
