--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 dependencies {
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
-
+	implementation group: 'jfree', name: 'jfreechart', version: '1.0.13'
     testImplementation 'junit:junit:4.13'
 
 }
